# coldreach

./: .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_MANAGEMENT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  SECURITY.md  docker-compose.yml  leads.json  mkdocs.yml  pyproject.toml  test_sources_live.py  test_sources_quick.py  test_v2_scan.py
.design/coldreach-dashboard/: DESIGN_BRIEF.md  INFORMATION_ARCHITECTURE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_source.md
.github/workflows/: ci.yml  docs.yml
chrome-extension/: manifest.json  package-lock.json  package.json  popup.html  tailwind.config.cjs  tsconfig.json  vite.popup.config.ts  vite.scripts.config.ts  vite.sw.config.ts
chrome-extension/icons/: README.md
chrome-extension/scripts/: generate-icons.mjs
chrome-extension/src/background/: service-worker.ts
chrome-extension/src/content/: greenhouse.ts  indeed.ts  index.ts  lever.ts  linkedin.ts  workable.ts
chrome-extension/src/popup/: App.tsx  styles.css
chrome-extension/src/popup/components/: DomainInput.tsx  DraftPanel.tsx  EmailTable.tsx  Header.tsx  JobDetected.tsx  ProgressBar.tsx  ServerStatus.tsx
coldreach/: __init__.py  api.py  cli.py  config.py  dashboard.py  diagnostics.py  exceptions.py
coldreach/core/: finder.py  models.py
coldreach/data/: disposable_domains.txt
coldreach/export/: __init__.py  writer.py
coldreach/generate/: __init__.py  learner.py  patterns.py
coldreach/outreach/: __init__.py  context.py  draft.py  templates.py  tracker.py
coldreach/resolve/: __init__.py  company.py
coldreach/sources/: __init__.py  base.py  crawl4ai_source.py  firecrawl.py  github.py  harvester.py  intelligent_search.py  reddit.py  search_engine.py  spiderfoot.py  web_crawler.py  whois_source.py
coldreach/storage/: __init__.py  cache.py
coldreach/tui/: app.py  coldreach.tcss
coldreach/tui/screens/: cache.py  find.py  outreach.py  status.py  verify.py
coldreach/tui/widgets/: draft_panel.py  help_modal.py
coldreach/verify/: __init__.py  _types.py  catchall.py  disposable.py  dns_check.py  holehe.py  pipeline.py  reacher.py  syntax.py
context/: current-task.md  decisions.md  handoff.md  phase6-plan.md
docs/: api-server.md  chrome-extension.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  hn-launch.md  how-it-works.md  index.md  outreach.md  sources.md  tui.md
docs/api/: generate.md  index.md  models.md  sources.md  storage.md  verify.md
docs/images/: CAPTURE_GUIDE.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: session_close.py  setup.sh
skills/session-close/: SKILL.md
tests/: conftest.py
tests/unit/: __init__.py  test_api.py  test_config.py  test_core_models.py  test_export_writer.py  test_generate_learner.py  test_generate_patterns.py  test_outreach_context.py  test_outreach_draft.py  test_outreach_tracker.py  test_resolve_company.py  test_sources_base.py  test_sources_github.py  test_sources_harvester.py  test_sources_reddit.py  test_sources_search_engine.py  test_sources_spiderfoot.py  test_sources_web_crawler.py  test_storage_cache.py  test_verify_catchall.py  test_verify_disposable.py  test_verify_dns.py  test_verify_holehe.py  test_verify_pipeline.py  test_verify_reacher.py  test_verify_syntax.py
